Fix: vertical text from more info button + vertical alignment top bar's paragraph

--- a/assets/css/moz.css
+++ b/assets/css/moz.css
@@ -11,7 +11,7 @@
 	}
 
 	[data-device] #portfolio-container .portfolio .column-text .cta-more-info{
-		line-height: 45px;
+		line-height: 44px;
 	}
 
 	[data-device] #top-bar h3{
